src/test/ui/error-codes/E0001.stderr
error: unreachable pattern
  --> $DIR/E0001.rs:18:9: in fn main
   |
LL |         _ => {/* ... */} //~ ERROR unreachable pattern
   |         ^
   |
note: lint level defined here
  --> $DIR/E0001.rs:11:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

